--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nimf (2018.07.09-1~bionic0709~3beol) bionic; urgency=medium
+nimf (2018.07.15-1.0~cosmic0717~3beol) cosmic; urgency=medium
 
   * 3beol libhangul
 
